# libbaptismdata

./: .gitignore  Makefile.am  README.md  configure.ac
src/: .gitignore  Makefile.am  baptismdata-version.h.in  baptismdata.c  baptismdata.h  libbaptismdata.pc.in
tools/: .gitignore  Makefile.am  bd-mdns.c  bd.c
